{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 72,
  "lineage": "fbb31808-3372-3da7-18d6-fcb2e6f0c7dc",
  "resources": [
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b283e01e33ec222a",
            "association_id": "eipassoc-0c6f3211cecdbcc6f",
            "domain": "vpc",
            "id": "eipalloc-0b283e01e33ec222a",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ccf0c88d1dc82e71",
            "private_dns": "ip-10-0-0-101.us-east-2.compute.internal",
            "private_ip": "10.0.0.101",
            "public_dns": "ec2-3-137-117-19.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.117.19",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2a",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2a",
              "Namespace": "eg",
              "Stage": "test"
            },
            "vpc": true
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0401f533435f29c24",
            "association_id": "eipassoc-01a7feda3360e9622",
            "domain": "vpc",
            "id": "eipalloc-0401f533435f29c24",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ff1bbe5ffedf31b7",
            "private_dns": "ip-10-0-0-135.us-east-2.compute.internal",
            "private_ip": "10.0.0.135",
            "public_dns": "ec2-3-17-119-115.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.119.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2b",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2b",
              "Namespace": "eg",
              "Stage": "test"
            },
            "vpc": true
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060fcfb9af08facf4",
            "association_id": "eipassoc-0eb4fc9f4cba20e86",
            "domain": "vpc",
            "id": "eipalloc-060fcfb9af08facf4",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05f582d8c1d6ad5a6",
            "private_dns": "ip-10-0-0-167.us-east-2.compute.internal",
            "private_ip": "10.0.0.167",
            "public_dns": "ec2-3-15-86-151.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.86.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2c",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2c",
              "Namespace": "eg",
              "Stage": "test"
            },
            "vpc": true
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b283e01e33ec222a",
            "association_id": "eipassoc-0c6f3211cecdbcc6f",
            "connectivity_type": "public",
            "id": "nat-093543c2759c859bf",
            "network_interface_id": "eni-0ccf0c88d1dc82e71",
            "private_ip": "10.0.0.101",
            "public_ip": "3.137.117.19",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c71ebafa10fbe316",
            "tags": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2a",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2a",
              "Namespace": "eg",
              "Stage": "test"
            }
          },
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0401f533435f29c24",
            "association_id": "eipassoc-01a7feda3360e9622",
            "connectivity_type": "public",
            "id": "nat-0771b0f0c8cd867d1",
            "network_interface_id": "eni-0ff1bbe5ffedf31b7",
            "private_ip": "10.0.0.135",
            "public_ip": "3.17.119.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d3a845f5ac169627",
            "tags": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2b",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2b",
              "Namespace": "eg",
              "Stage": "test"
            }
          },
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060fcfb9af08facf4",
            "association_id": "eipassoc-0eb4fc9f4cba20e86",
            "connectivity_type": "public",
            "id": "nat-0ca7e8c13516b9cfc",
            "network_interface_id": "eni-05f582d8c1d6ad5a6",
            "private_ip": "10.0.0.167",
            "public_ip": "3.15.86.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e303e4ae2c01f7d",
            "tags": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2c",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "eg-test-app-nat-use2c",
              "Namespace": "eg",
              "Stage": "test"
            }
          },
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:network-acl/acl-0bcb48350cb7c0034",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bcb48350cb7c0034",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "987100252004",
            "subnet_ids": [
              "subnet-05e0f52cf46b8b500",
              "subnet-0dd193277c70fcb88",
              "subnet-0e5473f83deff6de0"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-app-private",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "eg-test-app-private",
              "Namespace": "eg",
              "Stage": "test"
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:network-acl/acl-099693f4d5992b90e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-099693f4d5992b90e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "987100252004",
            "subnet_ids": [
              "subnet-03e303e4ae2c01f7d",
              "subnet-0c71ebafa10fbe316",
              "subnet-0d3a845f5ac169627"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "eg-test-app-public",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "eg-test-app-public",
              "Namespace": "eg",
              "Stage": "test"
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3706431043",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bcb48350cb7c0034",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_network_acl.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3034003473",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bcb48350cb7c0034",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_network_acl.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4291913270",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-099693f4d5992b90e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_network_acl.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2493220706",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-099693f4d5992b90e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_network_acl.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0539fdbf29b9b94531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-093543c2759c859bf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0539fdbf29b9b9453",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_nat_gateway.default",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0917d94ac488ce2f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0771b0f0c8cd867d1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0917d94ac488ce2f0",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_nat_gateway.default",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07a730f3d44231ada1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ca7e8c13516b9cfc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a730f3d44231ada",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_nat_gateway.default",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c80293939c1960c2",
            "id": "r-rtb-00e31643b0da58aa51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e31643b0da58aa5",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:route-table/rtb-0539fdbf29b9b9453",
            "id": "rtb-0539fdbf29b9b9453",
            "owner_id": "987100252004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-093543c2759c859bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2a",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2a",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:route-table/rtb-0917d94ac488ce2f0",
            "id": "rtb-0917d94ac488ce2f0",
            "owner_id": "987100252004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0771b0f0c8cd867d1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2b",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2b",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:route-table/rtb-07a730f3d44231ada",
            "id": "rtb-07a730f3d44231ada",
            "owner_id": "987100252004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ca7e8c13516b9cfc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2c",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2c",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:route-table/rtb-00e31643b0da58aa5",
            "id": "rtb-00e31643b0da58aa5",
            "owner_id": "987100252004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c80293939c1960c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public",
              "Name": "eg-test-app-public",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "eg-test-app-public",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06712c52179941768",
            "route_table_id": "rtb-0539fdbf29b9b9453",
            "subnet_id": "subnet-0e5473f83deff6de0"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00978268ae086af6c",
            "route_table_id": "rtb-0917d94ac488ce2f0",
            "subnet_id": "subnet-0dd193277c70fcb88"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d4734b70d2e007c",
            "route_table_id": "rtb-07a730f3d44231ada",
            "subnet_id": "subnet-05e0f52cf46b8b500"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a7631ffe27f806",
            "route_table_id": "rtb-00e31643b0da58aa5",
            "subnet_id": "subnet-0c71ebafa10fbe316"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff16eb518effd967",
            "route_table_id": "rtb-00e31643b0da58aa5",
            "subnet_id": "subnet-0d3a845f5ac169627"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0711612d0fdce22b5",
            "route_table_id": "rtb-00e31643b0da58aa5",
            "subnet_id": "subnet-03e303e4ae2c01f7d"
          },
          "dependencies": [
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:subnet/subnet-0e5473f83deff6de0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5473f83deff6de0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987100252004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2a",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2a",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:subnet/subnet-0dd193277c70fcb88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd193277c70fcb88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987100252004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2b",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2b",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:subnet/subnet-05e0f52cf46b8b500",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e0f52cf46b8b500",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987100252004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2c",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "eg-test-app-private-use2c",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:subnet/subnet-0c71ebafa10fbe316",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c71ebafa10fbe316",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987100252004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "eg-test-app-public-use2a",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "eg-test-app-public-use2a",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:subnet/subnet-0d3a845f5ac169627",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3a845f5ac169627",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987100252004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "eg-test-app-public-use2b",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "eg-test-app-public-use2b",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:subnet/subnet-03e303e4ae2c01f7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e303e4ae2c01f7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987100252004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "eg-test-app-public-use2c",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "eg-test-app-public-use2c",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "dependencies": [
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cbd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:security-group/sg-0030b5d89b0267f13",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0030b5d89b0267f13",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eg-ue2-test-sg-primary--ucOO-20231214231304593800000002",
            "name_prefix": "eg-ue2-test-sg-primary--ucOO-",
            "owner_id": "987100252004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "primary",
              "Environment": "ue2",
              "Name": "eg-ue2-test-sg-primary",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Attributes": "primary",
              "Environment": "ue2",
              "Name": "eg-ue2-test-sg-primary",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "keyed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "_allow_all_egress_",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1391008151",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0030b5d89b0267f13",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.cbd",
            "module.sg.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere",
            "from_port": 22,
            "id": "sgrule-1883082553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0030b5d89b0267f13",
            "security_group_rule_id": "sgr-0f312649bbee50bd2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.cbd",
            "module.sg.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:security-group/sg-03e0bbf486ddb9138",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03e0bbf486ddb9138",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "987100252004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "ue2",
              "Name": "eg-ue2-test-sg-default",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Environment": "ue2",
              "Name": "eg-ue2-test-sg-default",
              "Namespace": "eg",
              "Stage": "test"
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:internet-gateway/igw-0c80293939c1960c2",
            "id": "igw-0c80293939c1960c2",
            "owner_id": "987100252004",
            "tags": {
              "Environment": "ue2",
              "Name": "eg-ue2-test-sg",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Environment": "ue2",
              "Name": "eg-ue2-test-sg",
              "Namespace": "eg",
              "Stage": "test"
            },
            "vpc_id": "vpc-01a64be8bad9e06bf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987100252004:vpc/vpc-01a64be8bad9e06bf",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-09b68cee1c8002c78",
            "default_route_table_id": "rtb-0d4af1e10d910668f",
            "default_security_group_id": "sg-03e0bbf486ddb9138",
            "dhcp_options_id": "dopt-192ef872",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a64be8bad9e06bf",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0dcb50b69026ae96b",
            "ipv6_cidr_block": "2600:1f16:fbf:cd00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4af1e10d910668f",
            "owner_id": "987100252004",
            "tags": {
              "Environment": "ue2",
              "Name": "eg-ue2-test-sg",
              "Namespace": "eg",
              "Stage": "test"
            },
            "tags_all": {
              "Environment": "ue2",
              "Name": "eg-ue2-test-sg",
              "Namespace": "eg",
              "Stage": "test"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}